--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@
                 <input id="ceintqtyvalue" type="range" min="1" max="30" step="1" value="3" oninput="document.getElementById('ceintqty').innerHTML=this.value;">
             </fieldset>
             <fieldset>
+                <legend>Position corrigé</legend>
+                <input type="radio" class="radio" name="ceintcorrpos" value="fin" selected="true"> à part <input type="radio" class="radio" name="ceintcorrpos" value="apres"> après ceinture
+            </fieldset>
+            <fieldset>
                 <legend>Pied des colonnes</legend>
                 <input type="text" id="ceintpiedcol" placeholder="😕 😀 😎" value="😕 😀 😎" title="Laisser vide si vous ne voulez pas de pied">
             </fieldset>
