Commit de distinction

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<!--Maths et Mattic Projector, projet sous licence Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0.html), 2021 Vapps Line std
+<!--Maths et Matic Projector, projet sous licence Apache 2.0 (https://www.apache.org/licenses/LICENSE-2.0.html), 2021 Vapps Line std
 Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmentales)-->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,7 +8,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <meta name="keywords" content="Maths et Matic, Mathématiques, automatisme, calcul mental, images mentales, entiers, décimaux, relatifs,
                 fractions, fonctions, géométrie, calcul littéral, variable, aléatoire" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maths et Matic Projector, votre plateforme de celcul mentales en classe</title>
+    <title>Maths et Matic Projector, votre plateforme de calcul mentales en classe</title>
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
@@ -41,7 +41,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
 <body>
     <div id="app-container">
 <header>
-    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="img/android-icon-48x48.png" alt="logo" width="32" /></a>
+    <a id="btnaccueil" numero="#tab-accueil" class="logo tabs-menu-link"><img numero="#tab-accueil" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iab12671144a446f3/version/1607970976/image.png" alt="logo" width="32" /></a>
     <!--<input type="checkbox" id="btnnav">
     <label for="btnnav">
         <img src="img/iconfinder_menu-alt_134216.svg">
@@ -83,7 +83,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <a numero="#tab-corrige" class="tabs-menu-link">Corrigé</a>
             <a numero="#tab-historique" class="tabs-menu-link">Historique</a>
             <a numero="#tab-telechargements" class="tabs-menu-link">À propos</a>
-            <a href="https://maths-et-matic.jimdofree.com/" class="tabs-menu-link">Maths et Matic<span class="red">*</span></a>
+            <a href="https://maths-et-matic.jimdofree.com/" class="tabs-menu-link">Maths et Matic</a>
         </nav>
     </div>
 
@@ -94,12 +94,12 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         <section class="grille">
         <article class="accueillogo">
             <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>
-            <img src="img/logocm.png" width="160" class="logoMM">
+            <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1612443176/image.png" width="160" class="logoMM">
             <p>
-                <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
+                <b>Math et Matic Projector</b> votre plateforme de calcul mentales en classe
              </p>
              <p>
-                 Dans Téléchargements : des fichers de <b>ceintures de calcul mental</b> à imprimer pour le collège.
+                 Vous trouverez dans ce site, des automatismes et du calcul mental à données aléatoires sous forme de diaporamas, réponses en ligne...
              </p>
              <p><b>Nous contacter</b> : <a href="https://maths-et-matic.jimdofree.com/accueil/contact">https://maths-et-matic.jimdofree.com/accueil/contact</a> pour signaler les problèmes, faire des suggestions...</p>
             </article>
