Commit de distinction

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <div class="demo__colored-block"></div>
           </div>
           <div class="demo__colored-blocks-inner"></div>
-          <div class="demo__text">Prêt</div>
+          <div class="demo__text">Ready</div>
         </div>
         <div class="demo__inner">
           <svg class="demo__numbers" viewBox="0 0 100 100">
