--- a/diaporama.html
+++ b/diaporama.html
@@ -10,7 +10,7 @@
         <script src="js/libs/JSXGraph/jsxgraphcore.js"></script>
         <script src="js/libs/JSXGraph/JessieScript.js"></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js"></script>
-    </head>  
+    </head>
     <body>
         <div id="slideshow-container" class="hidden">
             <header>
@@ -19,7 +19,7 @@
                 <button title="Passer à la suivante pour tous" id="next-all" onclick="MM.nextAllSliders()"><img src="img/slider-next.png"></button>
             </header>
             <section id="slideshow"></section>
-        </div>        
+        </div>
         <div id="countdown-container" class="hidden">
             <div class="demo">
                 <div class="demo__colored-blocks">
@@ -29,7 +29,7 @@
                     <div class="demo__colored-block"></div>
                   </div>
                   <div class="demo__colored-blocks-inner"></div>
-                  <div class="demo__text">Prêt</div>
+                  <div class="demo__text">Ready</div>
                 </div>
                 <div class="demo__inner">
                   <svg class="demo__numbers" viewBox="0 0 100 100">
@@ -40,15 +40,15 @@
                       <path class="demo__num-join-2-3" d="M28,69 Q25,44 34.4,27.4"/>
                       <path class="demo__num-path-3" d="M30,20 60,20 40,50 a18,15 0 1,1 -12,19"/>
                     </defs>
-                    <path class="demo__numbers-path" 
-                          d="M-10,20 60,20 40,50 a18,15 0 1,1 -12,19 
+                    <path class="demo__numbers-path"
+                          d="M-10,20 60,20 40,50 a18,15 0 1,1 -12,19
                              Q25,44 34.4,27.4
-                             l7,-7 a16,16 0 0,1 22.6,22.6 l-30,30 l35,0 L69,73 
-                             a20,10 0 0,1 20,10 a17,17 0 0,1 -34,0 L55,83 
+                             l7,-7 a16,16 0 0,1 22.6,22.6 l-30,30 l35,0 L69,73
+                             a20,10 0 0,1 20,10 a17,17 0 0,1 -34,0 L55,83
                              l0,-61 L40,28" />
                   </svg>
                 </div>
               </div>
-        </div>            
+        </div>
     </body>
 </html>
