--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="js/libs/underscore-min.js"></script>
     <script src="js/libs/kas.js" defer></script>
     <script src="js/MM1toMM2.min.js"></script>
+    <script src="js/libs/vanilla-picker/vanilla-picker.min.js"></script>
     <script src="js/lib.mathsmentales.js?v=20" type="text/javascript" defer></script>
 </head>
 <body>
