--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>
             <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1612443176/image.png" width="160" class="logoMM">
             <p>
-                <b>Math et Matic Projector</b> votre plateforme de calcul mentales en classe
+                <b>Maths et Matic Projector</b> votre plateforme de calcul mentales en classe
              </p>
              <p>
                  Vous trouverez dans ce site, des automatismes et du calcul mental à données aléatoires sous forme de diaporamas, réponses en ligne...
