Ceinture paysage ajouté

--- a/index.html
+++ b/index.html
@@ -368,6 +368,10 @@
                 <legend>Pied des colonnes</legend>
                 <input type="text" id="ceintpiedcol" placeholder="😕 😀 😎" value="😕 😀 😎" title="Laisser vide si vous ne voulez pas de pied">
             </fieldset>
+            <fieldset>
+                <legend>Orientation page</legend>
+                <input type="radio" class="radio" name="ceintorientation" value="portrait" selected="true"> portrait <input type="radio" class="radio" name="ceintorientation" value="landscape"> paysage
+            </fieldset>
             <section>
                 <button class="button--primary beaubutton" onclick="MM.createCeintureSheet();">Générer</button>
             </section>
