--- a/pagetoprintlandscape.html
+++ b/pagetoprintlandscape.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <style>
             @page{
-                size:A4 portrait;
+                size:A4 landscape;
                 margin:1cm;
             }
         </style>
