Modif : fond colorés pour le corrigé aussi

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="tab-accueil" class="tabs-content-item">
         <section class="grille">
         <article class="accueillogo">
-            <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>
+            <!--<div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>-->
             <img src="img/logocm.png" width="160" class="logoMM">
             <p>
                 <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
